# authbot

./: README.md  bot.py  config.example.py  launch.py  pyproject.toml  schema.sql
cogs/: commands.py  emails.py  events.py
templates/: email.html  email.txt
views/: verify.py
